[gd_scene load_steps=5 format=3 uid="uid://xn6ae31bf2xv"]

[ext_resource type="Script" uid="uid://83yv1wistp8t" path="res://scripts/characters/npc/base_npc.gd" id="1_uwj5u"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1poqu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_w2gtl"]
radius = 13.0
height = 42.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_doalm"]
radius = 25.0
height = 62.0

[node name="npc" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_uwj5u")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -33)
sprite_frames = SubResource("SpriteFrames_1poqu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -20)
shape = SubResource("CapsuleShape2D_w2gtl")

[node name="chat_detection_area" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="chat_detection_area"]
position = Vector2(1, -22)
shape = SubResource("CapsuleShape2D_doalm")

[node name="NpcData" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -37.0
offset_top = -97.0
offset_right = 43.0
offset_bottom = -41.0

[node name="DamageLabel" type="Label" parent="NpcData"]
layout_mode = 0
offset_top = 8.0
offset_right = 75.0
offset_bottom = 22.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "-1"
horizontal_alignment = 1

[node name="PocketVBoxContainer" type="VBoxContainer" parent="NpcData"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -37.5
offset_top = -38.0
offset_right = 37.5
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = -5
alignment = 2

[node name="InteractLabel" type="Label" parent="NpcData/PocketVBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "[E] INTERACT"
horizontal_alignment = 1

[node name="BattleActionLabel" type="Label" parent="NpcData/PocketVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "ATTACKING"
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="NpcData/PocketVBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 10
text = "H: 4 D: 2 S: 2"
horizontal_alignment = 1

[connection signal="body_entered" from="chat_detection_area" to="." method="_on_chat_detection_area_body_entered"]
[connection signal="body_exited" from="chat_detection_area" to="." method="_on_chat_detection_area_body_exited"]
